# long-short-alpha

./: .gitignore  Dataset_Teaching.docx  Experimental_Framework.docx  Hypothesis_Catalog.docx  LICENSE  Makefile  README.md  Research_Design_Document.docx  Showcase_Ranking.docx  pyproject.toml
configs/: base.yaml
docs/: 00_data_audit.docx  06_results_interpretation_framework.docx
notebooks/: 00_data_audit.ipynb  01_leader_identification.ipynb  01_residual_momentum_baseline.ipynb  02_information_diffusion_hypothesis.ipynb  02_residualization.ipynb  03_leadlag_validation.ipynb  04_signal_decay.ipynb  05_liquidity.ipynb  05_robustness.ipynb  06_sector_neutrality.ipynb  07_time_stability.ipynb  08_capacity.ipynb  09_transaction_costs.ipynb
src/lsa/: __init__.py
src/lsa/analytics/: __init__.py  metrics.py  performance_report.py  trade_statistics.py
src/lsa/backtest/: __init__.py  accounting.py  backtester.py  execution_model.py
src/lsa/data/: __init__.py  cleaners.py  universe_builder.py  validators.py
src/lsa/features/: __init__.py
src/lsa/portfolio/: __init__.py  constraints.py  portfolio_builder.py  rebalancer.py
src/lsa/signals/: __init__.py  leader_follower_signal.py  residual_momentum.py
src/lsa/utils/: __init__.py
tests/: conftest.py  test_cleaners.py  test_universe_builder.py  test_validators.py
